--- a/style.css
+++ b/style.css
@@ -2102,6 +2102,11 @@ video {
   border-color: rgb(20 83 45 / var(--tw-border-opacity, 1));
 }
 
+.border-yellow-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
